--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ git <!DOCTYPE html>
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
@@ -75,12 +75,12 @@ git <!DOCTYPE html>
 
         <div class="carousel-inner" role="listbox">
 
-          <div class="carousel-item active" style="background-image: url('img/intro-carousel/1.jpg');">
+          <div class="carousel-item active" style="background-image: url('img/1309033IMG-20161102-WA0050780x390.jpg');">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>SELAMAT DATANG DI DESA MANTIGOLA</h2>
                 <p>Kecamatan Kaledupa Kabupaten Wakatobi</p>
-                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+                <a href="#featured-services" class="btn-get-started scrollto">Mulai</a>
               </div>
             </div>
           </div>
@@ -122,7 +122,7 @@ git <!DOCTYPE html>
                 <img src="img/received_692788216185637.jpeg" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-eye-outline"></i></div>
               </div>
-              <h2 class="title"><a href="#">kepala Desa</a></h2>
+              <h2 class="title"><a href="#">Kepala Desa</a></h2>
               <p>
                 Nurdin
               </p>
@@ -245,85 +245,22 @@ git <!DOCTYPE html>
       <div class="container">
         <div class="section-header wow fadeInUp">
           <h3>GALERI</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p></p>
         </div>
-
+        
         <div class="row">
-
           <div class="col-lg-3 col-md-6 wow fadeInUp">
             <div class="member">
-              <img src="img/" class="img-fluid" alt="">
+              <img src="img/OIP.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Walter White</h4>
-                  <span>Chief Executive Officer</span>
-                  <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
+                  <h4></h4>
+                  <span></span>
                 </div>
               </div>
             </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="member">
-              <img src="img/" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Sarah Jhonson</h4>
-                  <span>Product Manager</span>
-                  <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-            <div class="member">
-              <img src="img/" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>William Anderson</h4>
-                  <span>CTO</span>
-                  <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="member">
-              <img src="img/" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Amanda Jepson</h4>
-                  <span>Accountant</span>
-                  <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
         </div>
-
       </div>
     </section><!-- #team -->
 
@@ -367,25 +304,25 @@ git <!DOCTYPE html>
         </div>
 
         <div class="form">
-          <div id="sendmessage">Your message has been sent. Thank you!</div>
+          <div id="sendmessage">Pesan Anda Telah di Kirim. Terimakasih!</div>
           <div id="errormessage"></div>
           <form action="" method="post" role="form" class="contactForm">
             <div class="form-row">
               <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Nama" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                <input type="text" name="name" class="form-control" id="name" placeholder="Nama" data-rule="minlen:4" data-msg="Masukan Setidaknya 4 Karakter" />
                 <div class="validation"></div>
               </div>
               <div class="form-group col-md-6">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Please enter a valid email" />
+                <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Tolong Masukan Email Yang Benar" />
                 <div class="validation"></div>
               </div>
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Harap Masukan Setidaknya 8 Karakter Subjek" />
               <div class="validation"></div>
             </div>
             <div class="form-group">
-              <textarea class="form-control" name="Pesan" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Pesan"></textarea>
+              <textarea class="form-control" name="Pesan" rows="5" data-rule="required" data-msg="Tolong Tulis Sesuatu Untuk Kami" placeholder="Pesan"></textarea>
               <div class="validation"></div>
             </div>
             <div class="text-center"><button type="submit">Kirim Pesan</button></div>
@@ -413,11 +350,11 @@ git <!DOCTYPE html>
 
           <div class="col-lg-3 col-md-6 footer-info">
             <h3>MANTIGOLA</h3>
-            <p>Kec. Kaledupa Kab. Wakatobi</p>
+            <p>Kec. Kaledupa Kab. Wakatobi Sulawesi Tenggara</p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Halaman Menu</h4>
             <ul>
               <li><i class="ion-ios-arrow-right"></i> <a href="#">Home</a></li>
               <li><i class="ion-ios-arrow-right"></i> <a href="#">Profil Desa</a></li>
@@ -428,11 +365,9 @@ git <!DOCTYPE html>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>Contact Us</h4>
+            <h4>Contact</h4>
             <p>
-              Desa Mantigola<br>
-              Kec. Kaledupa<br>
-              Kab. Wakatobi <br>
+              Indra Brukman<br>
               <strong>Phone:</strong> 0822 3859 0096 <br>
               <strong>Email:</strong> indrabrukman16@gmail.com<br>
             </p>
